# Swift-Solar

./: README.md
take-home materials/: events_data.csv
take-home materials/django-base-main/: package-lock.json  package.json
take-home materials/django-base-main/myproject/: settings.py
take-home materials/django-base-main/pages/: admin.py  models.py  urls.py  views.py
take-home materials/django-base-main/pages/management/commands/: upload_data.py
take-home-materials/django-base-main/: .gitignore  README.md  manage.py  pyproject.toml
take-home-materials/django-base-main/pages/: urls.py  views.py
take-home-materials/django-base-main/pages/management/commands/: upload_data.py
take-home-materials/django-base-main/pages/migrations/: 0001_initial.py
take-home-materials/django-base-main/pages/static/: style.css
take-home-materials/django-base-main/pages/templates/pages/: form.html  histogram.html
take-home-materials/django-base-main/swiftsolar/: settings.py  urls.py
